; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/kvm/extr_interrupt.c_kvm_mips_queue_timer_int_cb.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/kvm/extr_interrupt.c_kvm_mips_queue_timer_int_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@C_IRQ5 = common dso_local global i32 0, align 4
@C_TI = common dso_local global i32 0, align 4
@MIPS_EXC_INT_TIMER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kvm_mips_queue_timer_int_cb(%struct.kvm_vcpu* %0) #0 {
  %2 = alloca %struct.kvm_vcpu*, align 8
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %2, align 8
  %3 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %2, align 8
  %4 = getelementptr inbounds %struct.kvm_vcpu, %struct.kvm_vcpu* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @C_IRQ5, align 4
  %8 = load i32, i32* @C_TI, align 4
  %9 = or i32 %7, %8
  %10 = call i32 @kvm_set_c0_guest_cause(i32 %6, i32 %9)
  %11 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %2, align 8
  %12 = load i32, i32* @MIPS_EXC_INT_TIMER, align 4
  %13 = call i32 @kvm_mips_queue_irq(%struct.kvm_vcpu* %11, i32 %12)
  ret void
}

declare dso_local i32 @kvm_set_c0_guest_cause(i32, i32) #1

declare dso_local i32 @kvm_mips_queue_irq(%struct.kvm_vcpu*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
